# terminy

./: pyproject.toml  requirements.txt  test_context_menu.py  test_navigation.py
.github/: copilot-instructions.md
src/: requirements.txt  terminy.py
src/gui/: directory.py  directory_tree.py  gui.py  language.py  main_window.py  record.py  stylesheet.py  utils.py
src/gui/lang/: cs.py  cs.txt  en_en.txt
src/gui/widgets/: center_scroll_page.py  context_menu.py  directory_pane.py  left_nav.py  record_pane.py  search_pane.py  splitter.py  topbar.py
src/logic/: controller.py  directory.py  file_object.py  helpers.py  indexer.py  language.py  path_manager.py  record.py  registry.py  storage.py  test.py  test_serialization.py
test_data/: config.json  config.json.old  data.json  data.json.old  recycle_bin.json  recycle_bin.json.old
